app/assets/stylesheets/common.css
/*
 *= require frontend
 *= require_self
 */

body {
  font-family: Verdana, Helvetica, Arial;
  font-size: 14px;
}

a img {
  border: none;
}

a {
  color: #0000FF;
}


#container {
  margin: 4 auto;
  border: solid 0px black;
}


#notice { background-color: #A4E7A0; border: 1px solid #26722D; }
#error { background-color: #F0A8A8; border: 1px solid #900; }
#notice, #error { width: 90%; margin: 0 auto 10px auto; padding: 5px; }
#notice p, #error p { margin-left: 20px; padding: 0; font-size: .75em; color: #000; }
#notice a, #error a { text-decoration: none; padding: 0 3px; }
#notice a { border: 1px solid #26722D; color: #26722D; }
#error a { border: 1px solid #900; color: #900; }
#notice a:hover, #error a:hover { color: #333; border: 1px solid #333; }

#menu_area {
  margin: 2px 0px 5px 0px;
}

#flash_notice, #flash_error, #flash_warning {
  padding: 5px 8px;
  margin: 10px 0;
}

#flash_notice {
  background-color: #CFC;
  border: solid 1px #6C6;
}

#flash_error {
  background-color: #FCC;
  border: solid 1px #C66;
}

#flash_warning {
  background-color: yellow;
  border: solid 1px #C66;
}
.clear {
  clear: both;
}



.fieldWithErrors {
  display: inline;
}
.fieldWithErrors input {
  border: 1px solid red;
}

#errorExplanation {
  width: 400px;
  border: 2px solid #CF0000;
  padding: 0px;
  padding-bottom: 12px;
  margin-bottom: 20px;
  background-color: #f0f0f0;
}

#errorExplanation h2 {
  text-align: left;
  font-weight: bold;
  padding: 5px 5px 5px 15px;
  font-size: 12px;
  margin: 0px;
  background-color: #c00;
  color: #fff;
}
#errorExplanation p {
  color: #333;
  margin-bottom: 0;
  padding: 8px;
}
#errorExplanation ul {
  margin: 2px 24px;
}
#errorExplanation ul li {
  font-size: 12px;
  list-style: disc;
}


.colors, .task, .tag{border-left:10px solid #eee; padding-left:10px;}
.task{border-color:#999; margin:2em 0;}

/* Admin screen styles */

.main_column {
  float: left;
  margin: 0 0 0px 0px;
}

.secondary_column {
  float:right;
  margin: 0 0 10px 10px;
}


/*  stagemgr-specific styles */


.stagemgr_calendar
{
width:435px;
}
.stagemgr_calendar .stagemgr_day_list_nav
{
float:left;
margin:0;
padding:0;
background:#8080B2;
width:100%;
}
.stagemgr_day_list_nav a
{
color:#FFFFFF;
}
.stagemgr_day_list_nav .stagemgr_previous
{
float:left;
}
.stagemgr_day_list_nav .stagemgr_next
{
float:right;
}
.stagemgr_calendar ul
{
float:left;
margin:0;
padding:0;
border:1px solid #C9C9C9;
width:60px;
}
.stagemgr_calendar ul li
{
list-style:none;
padding:0px 10px;
font-size:.5em;
}
.stagemgr_calendar ul li.day-header
{
background:#D9D9D9;
font-weight:bold;
text-align:right;
}

.stagemgr_calendar li.day-header
{
  font-weight:bold;
}

.stagemgr_calendar h1
{
  font-size: 1em;
}

.stagemgr_calendar h2
{
  font-size: .7em;
}

  .prop {
    float:right;
    width:1px;
  }

  .clear {
    clear:both;
    height:1px;
    overflow:hidden;
  }

  .min30px {
    height:30px;
  }
  .min50px {
    height:50px;
  }

  .min100px {
    height:100px;
  }

  .min150px {
    height:150px;
  }

  .min20px {
    height:20px;
  }

  .stagemgr_calendar li.vertical_center {
    height:20px;
    line-height:20px;
  }


td.currency {
  text-align: right;
}

td.boolean {
  text-align: center;
}


td.numeric {
  text-align: right;
}


.special_offer_upsell {
    text-align: center;
    font-weight: bold;
}

.report_title {
  font-weight: bold;
  font-size: 13px;
  vertical-align: top;
}

table.report {
  border-collapse: collapse;
  width: 100%;

}
.report th {
  color: white;
  background-color: darkblue;
  border-left: 1px solid darkblue;
  border-right: 1px solid darkblue;
  padding-left: 5px;
  padding-right: 5px;

}


.report caption {
  font-size: 14px;
  background-color: darkblue;
  font-weight:bold;
  color:white;
}

.report tr {
  background-color: white;
}
.report tr.odd {
  background-color: lightblue;
}
.report_summary_row {
  font-weight: bold;
}

.report td {
  border-left: 1px solid black;
  border-right: 1px solid black;
  padding-left: 5px;
  padding-right: 5px;
  padding-bottom: 2px;
  padding-top: 2px;
}

.help_text {
  display: block;
  font-style: italic;
  font-size: 12px;
  line-height: 1.2em;
  margin-botton: .5em;
}
/* Forms
*/

#non-exchange-notice {
    padding: 10px;
    font-weight: bold;
    font-style: italic;
}

#tax-deductible-notice {
    padding: 10px;
    font-style: italic;
}

.add_nested_item {
    font-size: 10px;
}

dl.name-value-display {
  float: left;
  width: 560px;
}


.name-value-display dt {   margin-top: 0px;   font-style: italic; vertical-align: text-bottom; clear: left;     float: left;      min-width: 175px;  }
.name-value-display  dd {     margin-top: 0px;     float: left;               }

